@@ -2822,6 +2822,20 @@ cat('A,B\n"aa",1\n"bb",2\n"cc",3\n', file=f)
 test(1012, fread(f), data.table(A=c("aa","bb","cc"),B=1:3))
 unlink(f)
 
+# integer64 control to fread
+test(1013, fread("A,B\n123,123\n", integer64="integer"), error="integer64='%s' which isn't 'integer64'|'double'|'numeric'|'character'")
+test(1014, fread("A,B\n123456789123456,21\n", integer64="character"), data.table(A="123456789123456",B=21L))
+test(1015, fread("A,B\n123456789123456,21\n", integer64="double"), data.table(A=as.double("123456789123456"),B=21L))
+# and that mid read bumps respect integer64 control too ..
+x = sample(1:1000,100,replace=TRUE)
+DT = data.table( A=as.character(x), B=1:100)
+DT[15, A:="123456789123456"]  # row 15 is outside the top, middle and last 5 rows.
+write.table(DT,f<-tempfile(),sep=",",row.names=FALSE,quote=FALSE)
+test(1016, fread(f,integer64="numeric"), copy(DT)[,A:=as.numeric(A)])
+test(1017, fread(f,integer64="character"), DT, warning="Bumped column.*to type character.*may not be lossless")
+unlink(f)
+
+
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
 # TO DO: tests on double in add hoc by
 # TO DO: test on -i that retain key e.g.  DT[-4] and DT[-4,sum(v),by=b] should both retain key
